Refactor: Add custom formatJava task and revert settings.gradle